--- a/The_Terminal/index.html
+++ b/The_Terminal/index.html
@@ -3,8 +3,9 @@
 <head>
   <title>The Terminal - Your Source for Fact-Based News</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resources/css/style.css">
 </head>
+<!-- This is the Box Model Example for CSS -->
 <body>
 
   <nav class="navigation">
